listElement: fix text overlap on mobile

--- a/src/views/ListElement.scss
+++ b/src/views/ListElement.scss
@@ -33,7 +33,7 @@
     padding: 0;
     margin: 0;
     line-height: 1;
-    height: 3rem;
+    height: 3.75rem;
     font-weight: 600;
     color: #14142b;
   }
